# opengl_tut

./: .gitignore  CMakeLists.txt  README.md
shaders/: triangle.glsl  triangle_f.glsl  triangle_v.glsl
src/: indexbuffer.cpp  indexbuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.cpp  vertexbufferlayout.h
